--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "/public/build"
   ],
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
     "@prisma/client": "^3.14.0",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
     "@remix-run/server-runtime": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0"
