--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
-    "@prisma/client": "^3.14.0",
-    "@remix-run/node": "^1.5.1",
-    "@remix-run/react": "^1.5.1",
-    "@remix-run/serve": "^1.5.1",
-    "@remix-run/server-runtime": "^1.5.1",
+    "@remix-run/node": "^1.6.3",
+    "@remix-run/react": "^1.6.3",
+    "@remix-run/serve": "^1.6.3",
+    "@remix-run/server-runtime": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
@@ -44,8 +43,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
-    "@remix-run/dev": "^1.5.1",
+    "@prisma/client": "^4.0.0",
+    "@remix-run/dev": "^1.6.3",
     "@remix-run/eslint-config": "^1.5.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -70,7 +71,7 @@
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "prisma": "^3.14.0",
+    "prisma": "^4.0.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.2",
     "ts-node": "^10.7.0",
