--- a/fly.toml
+++ b/fly.toml
@@ -14,7 +14,7 @@ source = "data"
 destination = "/data"
 
 [[services]]
-internal_port = 8_080
+internal_port = 8080
 processes = [ "app" ]
 protocol = "tcp"
 script_checks = [ ]
@@ -40,11 +40,11 @@ script_checks = [ ]
   timeout = "2s"
 
   [[services.http_checks]]
-  interval = 10_000
+  interval = "10s"
   grace_period = "5s"
   method = "get"
   path = "/healthcheck"
   protocol = "http"
-  timeout = 2_000
+  timeout = "2s"
   tls_skip_verify = false
   headers = { }
